--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,3 +58,32 @@ h2 {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
+/* hero image */
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center;
+}
+
+/* animates zoom effext on loading page */
+animation-name: hero-zoom;
+
+/* creates the level of zoom for hero image */
+
+@keyframes hero-zoom {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(3);
+    }
+}
